sandbox/output
Hiker.java:4: error: <identifier> expected
    public static int answer(String...) {
                                      ^
1 error
